kubernetes/mi_api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.road2tech.com
      secretName: mi-api-tls
  rules:
    - host: api.road2tech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mi-api
                port:
                  number: 8080
